WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
98368
[GTK] accessibility/label-for-control-hittest.html is failing
https://bugs.webkit.org/show_bug.cgi?id=98368
Summary
[GTK] accessibility/label-for-control-hittest.html is failing
Zan Dobersek
Reported
2012-10-04 00:41:07 PDT
accessibility/label-for-control-hittest.html is failing on all GTK platforms.
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#group=%40ToT%20-%20webkit.org&tests=accessibility%2Flabel-for-control-hittest.html
Attachments
Patch
(3.25 KB, patch)
2012-12-09 03:18 PST
,
Joanmarie Diggs
no flags
Details
Formatted Diff
Diff
Patch
(3.22 KB, patch)
2012-12-09 03:23 PST
,
Joanmarie Diggs
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Joanmarie Diggs
Comment 1
2012-10-16 13:25:00 PDT
Definitely failing due to AccessibilityUIElement::elementAtPoint() needing to be implemented in our DRT. Whether or not something else is required, I'm not yet sure.
Joanmarie Diggs
Comment 2
2012-12-09 03:18:14 PST
Created
attachment 178403
[details]
Patch
Joanmarie Diggs
Comment 3
2012-12-09 03:23:08 PST
Created
attachment 178405
[details]
Patch
Martin Robinson
Comment 4
2012-12-09 03:24:33 PST
Comment on
attachment 178405
[details]
Patch Great stuff!
WebKit Review Bot
Comment 5
2012-12-09 05:27:26 PST
Comment on
attachment 178405
[details]
Patch Clearing flags on attachment: 178405 Committed
r137071
: <
http://trac.webkit.org/changeset/137071
>
WebKit Review Bot
Comment 6
2012-12-09 05:27:29 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug