[GTK] accessibility/label-for-control-hittest.html is failing https://bugs.webkit.org/show_bug.cgi?id=98368

Patch by Joanmarie Diggs <jdiggs@igalia.com> on 2012-12-09
Reviewed by Martin Robinson.

Tools:

The test was failing because AccessibilityUIElement::elementAtPoint was
not implemented.

* DumpRenderTree/gtk/AccessibilityUIElementGtk.cpp:
(AccessibilityUIElement::elementAtPoint): implemented

LayoutTests:

Unskip the test having implemented AccessibilityUIElement::elementAtPoint.

* platform/gtk/TestExpectations: unskip accessibility/label-for-control-hittest.html

Canonical link: https://commits.webkit.org/122638@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137071 268f45cc-cd09-0410-ab3c-d52691b4dbfc